--- a/core/notification-utils/src/main/resources/configuration.properties
+++ b/core/notification-utils/src/main/resources/configuration.properties
@@ -3,8 +3,8 @@ sunbird.msg.91.sender=TesSun
 sunbird.msg.91.auth=
 sunbird.msg.91.method=POST
 sunbird.msg.91.route=4
-sunbird.msg.91.baseurl=http://api.msg91.com/
+sunbird.msg.91.baseurl=https://control.msg91.com/
 sunbird.msg.91.get.url=api/sendhttp.php?
-sunbird.msg.91.post.url=api/v2/sendsms
+sunbird.msg.91.post.url=api/v5/flow
 #NIC
 nic_sms_gateway_provider_base_url=https://smsgw.sms.gov.in/failsafe/HttpLink
